# radek-revamped

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cogs/: AI.py  Admin.py  Music.py  YouTube.py
